reports/overnight-parent-ai-audit/2026-05-04T14-41-05/logs/c-10.log

> leo-k-kids-site@1.0.0 test:parent-copilot-async-llm-gate
> tsx scripts/parent-copilot-async-llm-gate-suite.mjs

file:///C:/Users/ERAN%20YOSEF/Desktop/final%20projects/FINAL-WEB/LIOSH-WEB-TRY/scripts/parent-copilot-async-llm-gate-suite.mjs:4
import { getLlmGateDecision } from "../utils/parent-copilot/rollout-gates.js";
         ^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module '../utils/parent-copilot/rollout-gates.js' does not provide an export named 'getLlmGateDecision'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.0
